--- a/server.cfg
+++ b/server.cfg
@@ -3,6 +3,8 @@
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
 
+set mysql_connection_string "server=127.0.0.01;database=osi;userid=source"
+
 start mapmanager
 start chat
 start spawnmanager
