--- a/server.cfg
+++ b/server.cfg
@@ -8,9 +8,11 @@ set mysql_connection_string "server=127.0.0.01;database=osi;userid=source"
 start mapmanager
 start chat
 start spawnmanager
-start fivem
+start sessionmanager
+#start fivem
 start hardcap
 start rconlog
+start playernames
 start mysql-async
 start osi
 
