--- a/server.cfg
+++ b/server.cfg
@@ -9,7 +9,7 @@ start mapmanager
 start chat
 start spawnmanager
 start sessionmanager
-#start fivem
+start fivem
 start hardcap
 start rconlog
 start playernames
