--- a/server.cfg
+++ b/server.cfg
@@ -8,7 +8,6 @@ set mysql_connection_string "server=127.0.0.01;database=osi;userid=source"
 start mapmanager
 start chat
 start spawnmanager
-start sessionmanager
 start fivem
 start hardcap
 start rconlog
@@ -16,7 +15,9 @@ start playernames
 start mysql-async
 start osi
 
-sv_scriptHookAllowed 1
+restart sessionmanager
+
+sv_scriptHookAllowed 0
 
 # change this
 #rcon_password yay
