--- a/server.cfg
+++ b/server.cfg
@@ -24,7 +24,7 @@ sv_scriptHookAllowed 0
 # change this
 #rcon_password yay
 
-sv_hostname "My new FXServer!"
+sv_hostname "OSI - Corporate Government"
 
 # nested configs!
 #exec server_internal.cfg
