--- a/server.cfg
+++ b/server.cfg
@@ -30,10 +30,10 @@ sv_hostname "OSI - Corporate Government"
 #exec server_internal.cfg
 
 # loading a server icon (96x96 PNG file)
-#load_server_icon myLogo.png
+load_server_icon osi_icon.png
 
 # convars for use from script
-set temp_convar "hey world!"
+#set temp_convar "hey world!"
 
 # disable announcing? clear out the master by uncommenting this
 #sv_master1 ""
