--- a/server.cfg
+++ b/server.cfg
@@ -45,6 +45,7 @@ load_server_icon osi_icon.png
 # add system admins
 add_ace group.admin command allow # allow all commands
 add_ace group.admin command.quit deny # but don't allow quit
+add_ace group.admin menu allow
 add_principal identifier.steam:11000010479B699 group.admin # add the admin to the group
 
 # player endpoint protection
